--- a/COVID-19 mini project/index.html
+++ b/COVID-19 mini project/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 style="text-align: center;">COVID-19 Current Data(INDIA)</h1>
-    <button id="button" type="button">Load INDIA Data</button>
+    <button id="button" type="button">Load Current Data</button>
     <div id="info"></div>
     <script src="index.js"></script>
   </body>
